[gd_scene load_steps=5 format=3 uid="uid://csjvmu777yo5q"]

[ext_resource type="Script" uid="uid://b3x4mwtjmm4tp" path="res://plugins/grid_base_inventory_system/core/view/inventory/inventory_view.gd" id="1_n01jp"]
[ext_resource type="Script" uid="uid://dy2bqex483xwa" path="res://plugins/grid_base_inventory_system/core/test/test_scene.gd" id="1_ofb33"]
[ext_resource type="Script" uid="uid://dg6xjko3rdcta" path="res://plugins/grid_base_inventory_system/core/view/slot/equipment_slot_view.gd" id="3_qmsca"]
[ext_resource type="Texture2D" uid="uid://dxusr1agnbuhw" path="res://plugins/grid_base_inventory_system/assets/ui/boots_background.png" id="4_566py"]

[node name="TestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofb33")

[node name="InventoryView" type="Control" parent="."]
anchors_preset = 0
offset_left = 35.0
offset_top = 33.0
offset_right = 803.0
offset_bottom = 545.0
script = ExtResource("1_n01jp")
inventory_name = "inv_1"
inventory_columns = 12
inventory_rows = 8
base_size = 64
metadata/_custom_type_script = "uid://b3x4mwtjmm4tp"

[node name="InventoryView2" type="Control" parent="."]
anchors_preset = 0
offset_left = 1176.0
offset_top = 34.0
offset_right = 1560.0
offset_bottom = 546.0
script = ExtResource("1_n01jp")
inventory_name = "inv_2"
inventory_columns = 12
inventory_rows = 16
stack_num_font_size = 8
stack_num_margin = 2
metadata/_custom_type_script = "uid://b3x4mwtjmm4tp"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1388.0
offset_top = 787.0
offset_right = 1429.0
offset_bottom = 818.0
text = "Test"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 1380.0
offset_top = 686.0
offset_right = 1424.0
offset_bottom = 717.0
text = "Save"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 1377.0
offset_top = 739.0
offset_right = 1423.0
offset_bottom = 770.0
text = "Load"

[node name="SlotView" type="Control" parent="."]
anchors_preset = 0
offset_left = 350.0
offset_top = 592.0
offset_right = 494.0
offset_bottom = 736.0
script = ExtResource("3_qmsca")
slot_name = "boots_slot_1"
base_size = 48
columns = 3
rows = 3
background = ExtResource("4_566py")
avilable_types = Array[String](["BOOTS"])
metadata/_custom_type_script = "uid://dg6xjko3rdcta"

[node name="SlotView2" type="Control" parent="."]
anchors_preset = 0
offset_left = 63.0
offset_top = 587.0
offset_right = 319.0
offset_bottom = 971.0
script = ExtResource("3_qmsca")
slot_name = "boots_slot_2"
base_size = 128
rows = 3
background = ExtResource("4_566py")
avilable_types = Array[String](["BOOTS"])
metadata/_custom_type_script = "uid://dg6xjko3rdcta"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
